Maven checkstyle fixes
Testcases currently not working use -DskipTests when building with maven